--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,25 +10,24 @@
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/cardsController.js"></script>
+        <script src="directives/cardDirective.js"></script>
     </head>
     <body>
       <div class="container">
         <header class="navbar">
           <h1 class="pull-left">Cards Against Assembly</h1>
-
           <scores></scores>
         </header>
-
         <section id="cards" class="container-fluid" ng-controller="CardsController as cardsController">
           <div class="row">
 
             <div class="col-sm-6 col-md-6 col-lg-4" ng-repeat="card in cardsController.questionsList" >
-              <div class="card">
+           <!--    <div class="card">
                 <h4 class="card-title">{{card.question}}</h4>
                 <h6>Cards Against Assembly</h6>
-              </div>
+              </div> -->
+              <wdi-card question="{{card.question}}"></wdi-card>
             </div>
-
           </div>
         </section>
 
