--- a/public/index.html
+++ b/public/index.html
@@ -21,24 +21,29 @@
         <section id="cards" class="container-fluid" ng-controller="CardsController as cardsController">
           <div class="row">
 
-            <div class="col-sm-6 col-md-6 col-lg-4" ng-repeat="card in cardsController.getQuestions" >
+            <div class="col-sm-6 col-md-6 col-lg-4" ng-repeat="card in cardsController.all" >
 
               <div class="card">
                 <h4 class="card-title">{{card.question}}</h4>
                 <h6>Cards Against Assembly</h6>
               </div>
-              <wdi-card question="{{card.question}}"></wdi-card>
+              <button class='delete' ng-click="cardsController.deleteCard(card)">X</button>
+
+              <!-- <wdi-card question="{{card.question}}"></wdi-card> -->
 
             </div>
           </div>
-          <form class="add-card" ng-submit='cardsController.addCard(card)'>
+
+          <!-- add card -->
+
+          <form class="add-card" ng-submit='cardsController.addCard()'>
             <div>
               <label for="newCard-name">Question:</label>
-              <input type="text" id="newCard-question" ng-model="card.question" value="{{ question.question}}">
+              <input type="text" id="newCard-question" ng-model="cardsController.newCard.question" value="{{card.question}}">
             </div>
             <div>
               <label for="newCard-answer">Answer:</label>
-              <input type="text" id="newCard-answer" ng-model="card.answer" value="{{answer.answer}}">
+              <input type="text" id="newCard-answer" ng-model="cardsController.newCard.answer" value="{{card.answer}}">
             </div>
             <div>
               <input type="submit" value="Add Card">
