--- a/public/index.html
+++ b/public/index.html
@@ -12,18 +12,24 @@
         <script src="scripts/controllers/cardsController.js"></script>
         <script src="directives/cardDirective.js"></script>
     </head>
-    <body>
+    <body >
+    <!-- body -->
       <div class="container">
         <header class="navbar">
           <h1 class="pull-left">Cards Against Assembly</h1>
+          <br/>
+          <br/>
+          <h2>Search for
           <scores></scores>
+          <input type="text" placeholder="Find a Card" ng-model="searchText">
         </header>
-        <section id="cards" class="container-fluid" ng-controller="CardsController as cardsController">
+        <!-- ngcontroller -->
+        <section id="cards" class="container-fluid" 
+        ng-controller="CardsController as cardsController">
           <div class="row">
             
             <!-- NgRepeat -->
-            <div class="col-sm-6 col-md-6 col-lg-4" ng-repeat="card in cardsController.all" >
-
+            <div class="col-sm-6 col-md-6 col-lg-4" ng-repeat="card in cardsController.all | filter:searchText" data-id="card-data" >
               <div class="card">
                 <h4 class="card-title">{{card.question}}</h4>
                 <h6>Cards Against Assembly</h6>
@@ -35,11 +41,13 @@
               <form class="update-card" ng-submit='cardsController.updateCard(card)'>
               <div>
                 <label for="newCard-question">Question:</label>
-                <input type="text" id="newCard-name" ng-model="cardsController.question" value="{{ question.question }}">
+                <input type="text" id="newCard-name" ng-model="card.question">
+                <!-- value="{{ question.question }}"> -->
               </div>
               <div>
                 <label for="newCard-answer">Answer:</label>
-                <input type="text" id="newCard-Answer" ng-model="cardsController.answer" value="{{ answer.answer }}">
+                <input type="text" id="newCard-Answer" ng-model="card.answer">
+                 <!-- value="{{ answer.answer }}"> -->
               </div>
               <div>
               <br/>
